--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
     <div class="row">
 
       <div class="one-third column" style="margin-top: 10%">
-        <form action= "/" method="post">
+        <form action= "/" method="POST">
           <!-- shape -->
           <label for="shape">Shape</label>
           <select class="u-full-width" id="shape" name= "shape_name">
@@ -107,7 +107,7 @@
         <a href="mailto:shzr&#64;protonmail.com?subject=Wordcloud%20suggestion">Got a suggestion? Click here.</a>
         <br><a href="https:www.github.com/thatguyshzr">Github</a>&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https:www.instagram.com/thatguyshzr">Instagram</a>
-        
+        <p><small>Need help with: Submit shouldn't reset dropdown menu.</small></p>
       </div>
     </div>
   </div>
