--- a/templates/index.html
+++ b/templates/index.html
@@ -91,8 +91,8 @@
           </select>
 
           <!-- custom text -->
-          <!-- <label for="text">Custom Text</label>
-          <input class="u-full-width" type="text" id="custom" name="cust_text", placeholder= 'Preferably more than 100 words'> -->
+          <label for="text">Custom Text</label>
+          <input class="u-full-width" type="text" id="custom" name="cust_text", placeholder= 'Your text here.'>
           
           <button type="submit" class="btn btn-success">Submit</button>
         </form>
