Added custom text

--- a/templates/index.html
+++ b/templates/index.html
@@ -91,8 +91,8 @@
           </select>
 
           <!-- custom text -->
-<!--           <label for="text">Custom Text</label>
-          <input class="u-full-width" type="text" id="custom" name="cust_text", placeholder= 'Your text here.'> -->
+          <label for="text">Custom Text</label>
+          <input class="u-full-width" type="text" id="custom" name="cust_text", placeholder= 'Your text here.'>
           
           <button type="submit" class="btn btn-success">Submit</button>
         </form>
@@ -107,7 +107,7 @@
         <a href="mailto:shzr&#64;protonmail.com?subject=Wordcloud%20suggestion">Got a suggestion? Click here.</a>
         <br><a href="https:www.github.com/thatguyshzr">Github</a>&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https:www.instagram.com/thatguyshzr">Instagram</a>
-        <p><small>Need help with: Submit shouldn't reset dropdown menu.</small></p>
+        <br><p><small>Need help with: Submit shouldn't reset dropdown menu.</small></p>
       </div>
     </div>
   </div>
